[package]
name = "parsec"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.100"
bincode = "2.0.1"
clap = { version = "4.5.48", features = ["derive"] }
dashmap = "6.1.0"
directories = "6.0.0"
ignore = "0.4.23"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
once_cell = "1.21.3"
parking_lot = "0.12.5"
petgraph = "0.8.3"
rayon = "1.11.0"
regex = "1.11.3"
ropey = "1.6.1"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "io-std"] }
toml = "0.9.7"
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tree-sitter = "0.25.10"
tree-sitter-highlight = "0.25.10"
tree-sitter-julia = "0.23.1"
url = "2.5.7"

